<?xml version="1.0" encoding="utf-8"?>
<resources>

<string name="yes">"Yes"</string>
<string name="no">"No"</string>
<string name="cancel">"Cancel"</string>
<string name="score">"Score"</string>
<string name="title_id">"ID"</string>
<string name="title_name">"Name"</string>
<string name="good">"Good"</string>
<string name="fair">"Fair"</string>
<string name="poor">"Poor"</string>
<string name="lorem_ipsum">"Lorem ipsum dolor sit amet"</string>

<string name="settings_menu_about">"About"</string>
<string name="settings_menu_configuration">"Settings"</string>
<string name="settings_menu_licence">"License"</string>
<string name="settings_menu_logout">"Logout"</string>

<string name="dialog_title_delete_survey">"Delete Survey"</string>
<string name="dialog_info_delete_survey">"Are you sure you want to completely delete the survey: %s?"</string>
<string name="dialog_title_missing_selection">"Missing selection"</string>
...
<string name="score_title_avg">"AVG"</string>
<string name="score_title_environment">"Environment"</string>
<string name="score_title_profile">"Profile"</string>
<string name="score_info_tab_score">"Score for tab:"</string>
<string name="score_info_overall">"Overall"</string>
<string name="score_info_accumulated">"Tab num/dem"</string>
<string name="score_info_case1">"Case 1"</string>
<string name="score_info_case2">"Case 2"</string>
<string name="score_info_case3">"Case 3"</string>

<string name="compscore_title_score_percentage">"Score (%)"</string>

<string name="title_activity_settings">"Settings"</string>
<string name="settings_checkbox_customize_fonts">"Customize fonts?"</string>
<string name="settings_list_font_sizes">"Fonts size"</string>
<string name="settings_text_dhis_server_url">"DHIS Server URL"</string>
<string name="settings_text_dhis_user">"DHIS user"</string>
<string name="pref_header_general">"General"</string>
<string name="dialog_info_push_bad_credentials">"Bad credentials for pushing"</string>
<string name="dialog_info_push_empty_survey">"Empty surveys cannot be pushed"</string>
<string name="settings_menu_legal">"Legal"</string>
...
