...
  -->

<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/assessment_row"
    android:padding="5dp"
    android:background="@drawable/cell_borders">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
...

        <org.eyeseetea.malariacare.views.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/facility"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            app:tDimension="@string/font_size_level1"
...

        <org.eyeseetea.malariacare.views.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/survey_type"
            android:layout_gravity="center_vertical"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            app:tDimension="@string/font_size_level1"
            app:tFontName="@string/medium_font_name" />

...
