<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_footer"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/subscore_bar"
        android:baselineAligned="false">

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:id="@+id/space">

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.35"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:id="@+id/subTotalScoreTextContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <org.eyeseetea.malariacare.views.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/score_info_tab_score"
                android:id="@+id/subtotalScoreText"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/white"
                android:textStyle="bold|italic"
                android:paddingLeft="5dip"
                android:gravity="center"
                android:layout_gravity="center"
                app:tDimension="@string/font_size_level1"
                app:tFontName="@string/medium_font_name" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:id="@+id/subTotalScoreContainer">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <org.eyeseetea.malariacare.views.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/score"
            android:text="@string/number_zero_percentage"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center_vertical|right"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical|right"
            app:tDimension="@string/font_size_level1"
            app:tFontName="@string/medium_font_name" />

            <org.eyeseetea.malariacare.views.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/qualitativeScore"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center_vertical|right"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            app:tDimension="@string/font_size_level1"
            app:tFontName="@string/medium_font_name" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:layout_gravity="center_vertical|right"
        android:gravity="center_vertical|right">

        <org.eyeseetea.malariacare.views.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/score_info_accumulated"
            android:id="@+id/accumulatedText"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="false"
            android:gravity="center_vertical|end"
            app:tDimension="@string/font_size_level1"
            app:tFontName="@string/medium_font_name" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center_vertical|center|center_horizontal"
        android:layout_gravity="center">

        <org.eyeseetea.malariacare.views.CustomTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/empty_string"
            android:id="@+id/totalNum"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            app:tDimension="@string/font_size_level1"
            app:tFontName="@string/medium_font_name" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center_vertical|center|center_horizontal"
        android:layout_gravity="center">

        <org.eyeseetea.malariacare.views.CustomTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/totalDen"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/empty_string"
            app:tDimension="@string/font_size_level1"
            app:tFontName="@string/medium_font_name" />
    </RelativeLayout>

    </LinearLayout>

</LinearLayout>