<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/radio"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="@dimen/question_margin_right"
    android:orientation="horizontal">

    <include layout="@layout/parent_child_images"></include>
    <org.eyeseetea.malariacare.views.CustomTextView
        android:id="@+id/statement"
        style="@style/EyeSeeRadioScoredStatement"/>
    <RadioGroup
        android:id="@+id/answer"
        style="@style/EyeSeeRadioScoredAnswer">

    </RadioGroup>
    <include layout="@layout/score"></include>
</LinearLayout>